--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
       cursor: pointer;
     }
     video {
-      margin-top: 1em;
-      width: 100%;
-      max-width: 400px;
-      aspect-ratio: 4 / 1;
-      border: 2px dashed #007aff;
-    }
+  margin-top: 1em;
+  width: 100%;
+  max-width: 400px;
+  height: 80px;
+  object-fit: cover;
+  border: 2px dashed #007aff;
+  border-radius: 8px;
+}
   </style>
 </head>
 <body>
